<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        app:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:layout_editor_absoluteX="-16dp"
        android:backgroundTint="@color/black" />

    <Button
        android:id="@+id/loginGoogleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="loginWithGoogle"
        android:text="@string/login_with_google"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:layout_editor_absoluteX="-16dp"
        android:backgroundTint="@color/black"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginGoogleButton"
        app:layout_constraintVertical_bias="0.042"
        tools:layout_editor_absoluteX="0dp"
        android:backgroundTint="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>