<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/registerTextView"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/usernameEditText"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/userPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/userEmailEditText"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/userPasswordReEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/userPasswordEditText"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/userPasswordReEditText"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">


        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="register"
            android:text="@string/register"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="40dp"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:backgroundTint="@color/black"/>

    </LinearLayout>



</RelativeLayout>