<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
        android:id="@+id/concertImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/concertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/concertImage"
            android:padding="8dp"
            android:text="@string/concert_title"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/concertTitle"
            android:padding="8dp"
            android:text="@string/description"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:padding="8dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dontwanna"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/add_to_cart"/>
        </RelativeLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>